--- a/WPF_InventoryListCreator/packages.config
+++ b/WPF_InventoryListCreator/packages.config
@@ -6,6 +6,7 @@
   <package id="MaterialDesignThemes" version="4.0.0" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="NLog" version="4.7.8" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="5.0.0" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net472" />
   <package id="System.Security.Permissions" version="5.0.0" targetFramework="net472" />
