--- a/WPF_InventoryListCreator/WPF_InventoryListCreator.csproj
+++ b/WPF_InventoryListCreator/WPF_InventoryListCreator.csproj
@@ -28,9 +28,9 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ProductName>Inventurliste Creator</ProductName>
+    <ProductName>Inventurliste Erstellung</ProductName>
     <PublisherName>Marcel Judth</PublisherName>
-    <ApplicationRevision>7</ApplicationRevision>
+    <ApplicationRevision>9</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
